[gd_scene format=3 uid="uid://bytsp0siucxdi"]

[ext_resource type="Script" uid="uid://c7buj1d576vcp" path="res://dialogues/balloon.gd" id="1_36de5"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="2_a8ve6"]
[ext_resource type="Texture2D" uid="uid://jhocj6o0fpdd" path="res://dialogues/UI/action_bar.png" id="2_rvrp7"]
[ext_resource type="AudioStream" uid="uid://7araup0hm8nx" path="res://audio/SFX/GUI SFX/menu/Sfx_Dialogue_Accept.ogg" id="2_vhs4w"]
[ext_resource type="Script" uid="uid://bb52rsfwhkxbn" path="res://addons/dialogue_manager/dialogue_responses_menu.gd" id="3_72ixx"]
[ext_resource type="FontFile" uid="uid://c75b0davad3b1" path="res://UI/Fonts/Remember.ttf" id="3_m00rr"]
[ext_resource type="AudioStream" uid="uid://crxjkcaksmsdk" path="res://audio/SFX/GUI SFX/menu/Sfx_Dialogue_Cancel.ogg" id="3_tqbpj"]
[ext_resource type="Texture2D" uid="uid://dypanwus8y4lc" path="res://dialogues/UI/Indicator.png" id="6_q5xg4"]
[ext_resource type="SpriteFrames" uid="uid://ymf25xdicwja" path="res://dialogues/TALKSPRITES/spriteframes/Ciro_talksprites.tres" id="7_vd2yh"]
[ext_resource type="Texture2D" uid="uid://dfkrbdnycjn3i" path="res://dialogues/UI/dialogue_name_tab.png" id="7_vhs4w"]
[ext_resource type="AudioStream" uid="uid://eugb20fy3pmr" path="res://audio/SFX/GUI SFX/menu/Sfx_Accept.ogg" id="9_2x2yy"]
[ext_resource type="StyleBox" uid="uid://c86dt8n6o8kwp" path="res://UI/Menu/styleboxes/dialogueSelect_stylebox.tres" id="10_el35x"]
[ext_resource type="AudioStream" uid="uid://cqhl1fvyvtp1d" path="res://audio/SFX/GUI SFX/menu/Sfx_Cancel.ogg" id="10_q5xg4"]
[ext_resource type="StyleBox" uid="uid://dempsurbc1qhv" path="res://UI/Menu/styleboxes/dialogueResponse_stylebox.tres" id="11_nqcss"]
[ext_resource type="Script" uid="uid://cfylos866td70" path="res://UI/Menu/MainMenu/menu_button.gd" id="11_q5xg4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h1o10"]
content_margin_left = 6.0
content_margin_top = 3.0
content_margin_right = 6.0
content_margin_bottom = 3.0
bg_color = Color(0.0666667, 0.0666667, 0.0666667, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.345098, 0.345098, 0.345098, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w8qnx"]
content_margin_left = 6.0
content_margin_top = 3.0
content_margin_right = 6.0
content_margin_bottom = 3.0
bg_color = Color(0.227451, 0.227451, 0.227451, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2nmpr"]
content_margin_left = 6.0
content_margin_top = 3.0
content_margin_right = 6.0
content_margin_bottom = 3.0
bg_color = Color(0.0666667, 0.0666667, 0.0666667, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u4hgb"]
content_margin_left = 6.0
content_margin_top = 3.0
content_margin_right = 6.0
content_margin_bottom = 3.0
bg_color = Color(0.0666667, 0.0666667, 0.0666667, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ucdb0"]

[sub_resource type="Theme" id="Theme_qq3yp"]
default_font_size = 8
Button/styles/disabled = SubResource("StyleBoxFlat_h1o10")
Button/styles/focus = SubResource("StyleBoxFlat_w8qnx")
Button/styles/hover = SubResource("StyleBoxFlat_2nmpr")
Button/styles/normal = SubResource("StyleBoxFlat_u4hgb")
MarginContainer/constants/margin_bottom = 4
MarginContainer/constants/margin_left = 8
MarginContainer/constants/margin_right = 8
MarginContainer/constants/margin_top = 4
Panel/styles/panel = SubResource("StyleBoxEmpty_ucdb0")

[sub_resource type="AtlasTexture" id="AtlasTexture_tqbpj"]
atlas = ExtResource("2_rvrp7")
region = Rect2(0, 0, 352, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5306v"]
atlas = ExtResource("2_rvrp7")
region = Rect2(0, 160, 352, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhs4w"]
atlas = ExtResource("2_rvrp7")
region = Rect2(0, 80, 352, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_5uq3k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"NONE",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqbpj")
}],
"loop": false,
"name": &"black",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5306v")
}],
"loop": false,
"name": &"dialogue",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhs4w")
}],
"loop": false,
"name": &"thoughts",
"speed": 0.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_nb4o0"]
atlas = ExtResource("7_vhs4w")
region = Rect2(0, 0, 352, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kst71"]
atlas = ExtResource("7_vhs4w")
region = Rect2(0, 32, 352, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gmi16"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nb4o0")
}],
"loop": false,
"name": &"black",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kst71")
}],
"loop": false,
"name": &"dialogue",
"speed": 0.0
}]

[sub_resource type="Animation" id="Animation_r5nqk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(318, 289)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../NameTab:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Talkface:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, 1.5)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Talkface:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-149.022, -87)]
}

[sub_resource type="Animation" id="Animation_el35x"]
resource_name = "ballon_nextLine"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(318, 289), Vector2(318, 289.933), Vector2(318, 289)]
}

[sub_resource type="Animation" id="Animation_m00rr"]
resource_name = "balloon_fade_in"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Talkface:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-154, -87), Vector2(-126, -87)]
}

[sub_resource type="Animation" id="Animation_vd2yh"]
resource_name = "balloon_fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Talkface:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-126, -87), Vector2(-154, -87)]
}

[sub_resource type="Animation" id="Animation_rvrp7"]
resource_name = "balloon_popUp"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-0.0017675, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(318, 289)]
}

[sub_resource type="Animation" id="Animation_gb3oo"]
resource_name = "nameTab_PopUp"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../NameTab:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 0), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mofex"]
_data = {
&"RESET": SubResource("Animation_r5nqk"),
&"ballon_nextLine": SubResource("Animation_el35x"),
&"balloon_fade_in": SubResource("Animation_m00rr"),
&"balloon_fade_out": SubResource("Animation_vd2yh"),
&"balloon_popUp": SubResource("Animation_rvrp7"),
&"nameTab_PopUp": SubResource("Animation_gb3oo")
}

[sub_resource type="Animation" id="Animation_q5xg4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_2x2yy"]
resource_name = "indicate"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vd2yh"]
_data = {
&"RESET": SubResource("Animation_q5xg4"),
&"indicate": SubResource("Animation_2x2yy")
}

[sub_resource type="Animation" id="Animation_tqbpj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Balloon/Responses:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_vhs4w"]
resource_name = "responses_fade_in"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Balloon/Responses:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5306v"]
resource_name = "responses_fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Balloon/Responses:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5306v"]
_data = {
&"RESET": SubResource("Animation_tqbpj"),
&"responses_fade_in": SubResource("Animation_vhs4w"),
&"responses_fade_out": SubResource("Animation_5306v")
}

[node name="Balloon" type="CanvasLayer" unique_id=1400291361]
process_mode = 3
layer = 100
script = ExtResource("1_36de5")
dialogue_start = ExtResource("2_vhs4w")
dialogue_skip = ExtResource("3_tqbpj")
volume_db = -10.0

[node name="Balloon" type="Control" parent="." unique_id=947929588]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_qq3yp")

[node name="DialogueBar" type="AnimatedSprite2D" parent="Balloon" unique_id=1794212573]
editor_description = "COLOR OFF:           181d18d7
GRIS VERDOSO:    666a66d7
DESEADO:              c1c1c1d7
"
position = Vector2(318, 289)
sprite_frames = SubResource("SpriteFrames_5uq3k")
animation = &"dialogue"
metadata/_edit_group_ = true

[node name="Panel" type="Panel" parent="Balloon/DialogueBar" unique_id=1256301705]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -164.0
offset_top = -120.0
offset_right = -188.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 0

[node name="Dialogue" type="MarginContainer" parent="Balloon/DialogueBar/Panel" unique_id=813438131]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 13.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Balloon/DialogueBar/Panel/Dialogue" unique_id=1767862254]
layout_mode = 2
theme_override_constants/separation = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Balloon/DialogueBar/Panel/Dialogue/HBoxContainer" unique_id=1243854131]
layout_mode = 2
size_flags_horizontal = 3

[node name="DialogueLabel" parent="Balloon/DialogueBar/Panel/Dialogue/HBoxContainer/VBoxContainer" unique_id=1288605701 instance=ExtResource("2_a8ve6")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0.0885599, 0.0885599, 0.0885599, 1)
theme_override_constants/shadow_outline_size = 2
theme_override_constants/text_highlight_h_padding = 2
theme_override_constants/text_highlight_v_padding = 2
theme_override_fonts/normal_font = ExtResource("3_m00rr")
theme_override_fonts/bold_font = ExtResource("3_m00rr")
theme_override_fonts/bold_italics_font = ExtResource("3_m00rr")
theme_override_fonts/italics_font = ExtResource("3_m00rr")
theme_override_fonts/mono_font = ExtResource("3_m00rr")
theme_override_font_sizes/normal_font_size = 14
theme_override_font_sizes/bold_font_size = 14
theme_override_font_sizes/bold_italics_font_size = 14
theme_override_font_sizes/italics_font_size = 14
theme_override_font_sizes/mono_font_size = 14
text = "Text in here."
seconds_per_step = 0.04
skip_pause_at_abbreviations = PackedStringArray("Mr", "Mrs", "Ms", "Dr", "etc", "eg", "ex", "Sr", "Sra", "Dra", "ej")

[node name="Talkface" type="AnimatedSprite2D" parent="Balloon/DialogueBar" unique_id=1239161442]
show_behind_parent = true
z_index = 2
position = Vector2(-149.022, -87)
scale = Vector2(1.5, 1.5)
sprite_frames = ExtResource("7_vd2yh")
animation = &"neutral"

[node name="NameTab" type="AnimatedSprite2D" parent="Balloon/DialogueBar" unique_id=1414179289]
position = Vector2(4.97809, -40)
sprite_frames = SubResource("SpriteFrames_gmi16")
animation = &"dialogue"
offset = Vector2(0, -16)

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon/DialogueBar/NameTab" unique_id=313356777]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
z_index = 1
offset_left = -74.4477
offset_top = -16.0
offset_right = 59.5523
mouse_filter = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 1
theme_override_constants/outline_size = 1
theme_override_constants/text_highlight_h_padding = 2
theme_override_constants/text_highlight_v_padding = 2
theme_override_fonts/normal_font = ExtResource("3_m00rr")
theme_override_fonts/bold_font = ExtResource("3_m00rr")
theme_override_fonts/bold_italics_font = ExtResource("3_m00rr")
theme_override_fonts/italics_font = ExtResource("3_m00rr")
theme_override_fonts/mono_font = ExtResource("3_m00rr")
theme_override_font_sizes/normal_font_size = 14
theme_override_font_sizes/bold_font_size = 10
theme_override_font_sizes/bold_italics_font_size = 10
theme_override_font_sizes/italics_font_size = 10
theme_override_font_sizes/mono_font_size = 10
bbcode_enabled = true
text = "Name"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="Indicator" type="Sprite2D" parent="Balloon/DialogueBar" unique_id=74524336]
z_index = 3
position = Vector2(153, 20.1278)
texture = ExtResource("6_q5xg4")
hframes = 2

[node name="Responses" type="MarginContainer" parent="Balloon" unique_id=1906347738]
process_mode = 3
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -136.932
offset_right = 174.0
offset_bottom = -99.9324
grow_horizontal = 2
grow_vertical = 0

[node name="ResponsesMenu" type="VBoxContainer" parent="Balloon/Responses" unique_id=2051976774 node_paths=PackedStringArray("response_template")]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 2
script = ExtResource("3_72ixx")
response_template = NodePath("ResponseExample")

[node name="ResponseExample" type="Button" parent="Balloon/Responses/ResponsesMenu" unique_id=1488189462]
process_mode = 3
layout_mode = 2
theme_override_colors/font_color = Color(0.607843, 0.607843, 0.607843, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_disabled_color = Color(0.431373, 0.431373, 0.431373, 1)
theme_override_fonts/font = ExtResource("3_m00rr")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("11_nqcss")
theme_override_styles/hover = ExtResource("10_el35x")
theme_override_styles/focus = ExtResource("10_el35x")
text = "Response example"
script = ExtResource("11_q5xg4")

[node name="BallonAnimations" type="AnimationPlayer" parent="Balloon" unique_id=1534307427]
process_mode = 3
root_node = NodePath("../DialogueBar/Indicator")
libraries/ = SubResource("AnimationLibrary_mofex")
autoplay = &"balloon_fade_in"

[node name="IndicatorAnimations" type="AnimationPlayer" parent="Balloon" unique_id=462518781]
root_node = NodePath("../DialogueBar/Indicator")
libraries/ = SubResource("AnimationLibrary_vd2yh")
autoplay = &"indicate"

[node name="ResponsesAnimations" type="AnimationPlayer" parent="Balloon" unique_id=666277534]
process_mode = 3
root_node = NodePath("../..")
libraries/ = SubResource("AnimationLibrary_5306v")

[node name="DialogueStart" type="AudioStreamPlayer" parent="." unique_id=13606054]
stream = ExtResource("9_2x2yy")
volume_db = -20.0
pitch_scale = 1.5
bus = &"SFX"

[node name="DialogueSkip" type="AudioStreamPlayer" parent="." unique_id=240580311]
stream = ExtResource("10_q5xg4")
volume_db = -20.0
pitch_scale = 1.5
max_polyphony = 2
bus = &"SFX"

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="response_selected" from="Balloon/Responses/ResponsesMenu" to="." method="_on_responses_menu_response_selected"]
